# ValidadorSPED

./: README.md
ValidadorTributario/: README.md  requirements.txt
ValidadorTributario/src/: Dockerfile  GuiApp.py  ValidadorTributario.py  instalar.py  install.py
validadorSPED/: Dockerfile  pyproject.toml  requirements.txt
validadorSPED/src/: GuiApp.py  instalar.py  validadorSPED.py
